--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
     --white: #FFF;
     --cloud: #F4F4FD;
     --cornflower: #E7E9FC;
+    --light-slate: #8E8F99;
+    --green: #31D0AA;
 }
 
 p, h1, h2, h3, h4, h5, h6  { margin-top: 0;
@@ -166,6 +168,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 background-color: var(--cloud);
+border-radius: 4px;
 }
 
 
@@ -181,6 +184,8 @@ background-color: var(--cloud);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+    height: 72px;
 }
 
 /*----------FUNCTIONS----------*/
@@ -264,13 +269,12 @@ height: auto;
 
 .team-svg { fill: var(--cloud);}
 
+ 
+
+
+
 .team-svg-border { height: 40px;
 width: 40px;
-background-color: var(--iris);
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
 }
 
 
@@ -282,14 +286,76 @@ justify-content: center;
     gap: 24px;
 }
 
+.team-block-link { width: 100%;
+height: 100%;
+background-color: var(--iris);
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+ .team-block-link:hover,
+ .team-block-link:focus{
+     background-color: var(--green);}
+
 
 /*----------Customers----------*/
 .customers { background-color: var(--white);
+    padding-top: 120px;
+    padding-bottom: 120px;
+
 
 }
 
-.title-customers {
+.title-customers { color: var(--navyblue);
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    margin: 0 auto;
+    margin-bottom: 72px;
+
+
 }
+.customers-together { display: flex;
+    gap: 24px;
+     
+
+
+}
+.customers-svg-border {  width: calc((100% - 120px) / 6);
+    height: 88px;
+
+
+}
+
+.customers-link { 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--light-slate);
+    border-radius: 4px;
+    color: var(--light-slate);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+.customers-link:hover,
+.customers-link:focus {
+    border: 1px solid var(--ocean);
+    color: var(--ocean); }
+
+
+.customers-svg { 
+    fill: currentColor;
+}
+
+     
+     
 
 
 
@@ -332,21 +398,35 @@ justify-content: center;
     line-height: 1.5;
     letter-spacing: 0.02 em;
     margin-bottom: 16px;
-
-
 }
 
+
+.footer-socila-media { display: flex;
+gap: 16px;
+}
 
 .media-svg-border {
     height: 40px;
     width: 40px;
+     
+}
+.footer-block-link { width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-color: var(--iris);
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
- }
+}
+.footer-block-link:hover,
+.footer-block-link:focus {
+    background-color: var(--green)}
+
+
+.media-svg { fill: var(--cloud);}
+
 /*----------BTN----------*/
 
 
