--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ body {  background-color: #FFFFFF;
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-item-menu:hover,
@@ -119,6 +120,7 @@ gap: 40px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-contacts:hover,
 .address-contacts:focus { color: var(--ocean);
@@ -163,6 +165,7 @@ gap: 40px;
     min-width: 169px;
     height: 56px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -266,6 +269,11 @@ height: auto;
 .team-item { background-color: var(--white);
     width: calc((100% - 3*24px)/4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+img
+Image · 264 x 260
+
 
 }
 .name-job {
@@ -496,7 +504,10 @@ gap: 16px;
     padding: 12px 24px;
     border: 1px solid var(--cornflower);
     border-radius: 4px;
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
    
 }
@@ -504,6 +515,9 @@ gap: 16px;
 .btn-menu-item:focus{ color: var(--white);
     background-color: var(--ocean);
     border: 1px solid transparent;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+
 
 }
 .service { background-color: var(--white);
@@ -515,6 +529,34 @@ gap: 16px;
 }
 .service-item {
 }
+  
+.text-over-img { position: relative;
+    overflow: hidden;
+
+}
+
+.text-over-img:hover .text-over { 
+    transform: translateY(0);
+     
+}
+.text-over{ position: absolute;
+top:0;
+left:0;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--cloud);
+background-color: var(--iris);
+height: 100%;
+padding: 40px 32px 164px 32px;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+}
+
+
 .service-list-link {text-decoration: none;
 }
 
