--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,12 @@ body {  background-color: #FFFFFF;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .top { background-color: var(--white);
     border-bottom: 1px solid var(--cornflower);
+
 
 }
 .header {  
@@ -98,6 +100,7 @@ color: var(--ocean);}
     background-color: var(--ocean);
     bottom: -1px;
     left: 0;
+    border-radius: 2px
 
 }
 
@@ -129,7 +132,7 @@ gap: 40px;
 /*----------HERO----------*/
 
 .hero { 
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/people-office\ 1\ \(1\).jpg); 
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1\ \(1\).jpg);
     max-width: 1440px;
     background-position: center;
     background-repeat: no-repeat;
@@ -195,6 +198,7 @@ align-items: center;
 justify-content: center;
 background-color: var(--cloud);
 border-radius: 4px;
+margin-bottom: 8px;
 }
 
 
@@ -203,7 +207,7 @@ border-radius: 4px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin-bottom: 8px;
+     
 }
 
 .qualities-item-text { color: var(--slate);
@@ -277,7 +281,7 @@ Image · 264 x 260
 
 }
 .name-job {
-    padding: 32px 16px;
+    padding: 32px 0px;
 }
 
 .team-item-title { color: var(--navyblue);
@@ -328,7 +332,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
  .team-block-link:hover,
  .team-block-link:focus{
-     background-color: var(--green);}
+     background-color: #404bbf;}
 
 
 /*----------Customers----------*/
@@ -371,7 +375,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     border: 1px solid var(--light-slate);
     border-radius: 4px;
     color: var(--light-slate);
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
@@ -396,7 +400,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     padding: 100px 0
 }
 
-.footer-together  { display: flex;}
+.footer-together  { display: flex;
+    align-items: baseline;
+}
 
 .footer-logo-text {margin-right: 120px;}
 
@@ -427,7 +433,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .media-footer { color: var(--white);
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02 em;
+    font-weight: 500;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
@@ -505,7 +512,7 @@ gap: 16px;
     border: 1px solid var(--cornflower);
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
@@ -515,9 +522,7 @@ gap: 16px;
 .btn-menu-item:focus{ color: var(--white);
     background-color: var(--ocean);
     border: 1px solid transparent;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-
-
+    box-shadow: box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
 }
 .service { background-color: var(--white);
@@ -533,13 +538,20 @@ gap: 16px;
 .text-over-img { position: relative;
     overflow: hidden;
 
-}
+} 
+
+.service-list-link { transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .service-list-link:hover .text-over { 
-    transform: translateY(0);
+    transform: translateY(0%);
     cursor: pointer;
+    display: block;
      
 }
+.service-list-link:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .text-over{ position: absolute;
 top:0;
 left:0;
@@ -550,7 +562,7 @@ letter-spacing: 0.02em;
 color: var(--cloud);
 background-color: var(--iris);
 height: 100%;
-padding: 40px 32px 164px 32px;
+padding: 40px 32px;
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
