--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,9 @@ body {  background-color: #FFFFFF;
 
 .top { background-color: var(--white);
     border-bottom: 1px solid var(--cornflower);
+    box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 
 
 }
@@ -132,7 +135,7 @@ gap: 40px;
 /*----------HERO----------*/
 
 .hero { 
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1\ \(1\).jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),url(../images/people-office\ 1\ \(1\).jpg);
     max-width: 1440px;
     background-position: center;
     background-repeat: no-repeat;
@@ -522,8 +525,7 @@ gap: 16px;
 .btn-menu-item:focus{ color: var(--white);
     background-color: var(--ocean);
     border: 1px solid transparent;
-    box-shadow: box-shadow: зі значенням 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .service { background-color: var(--white);
 }
@@ -540,15 +542,18 @@ gap: 16px;
 
 } 
 
-.service-list-link { transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+.service-list-link { transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;}
 
-.service-list-link:hover .text-over { 
+.service-list-link:hover .text-over,
+.service-list-link:focus .text-over { 
     transform: translateY(0%);
     cursor: pointer;
-    display: block;
+     
      
 }
-.service-list-link:hover {
+.service-list-link:hover,
+.service-list-limk:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
