--- a/css/styles.css
+++ b/css/styles.css
@@ -553,7 +553,7 @@ gap: 16px;
      
 }
 .service-list-link:hover,
-.service-list-limk:focus {
+.service-list-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
