--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ gap: 40px;
 /*----------HERO----------*/
 
 .hero { 
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),url(../images/people-office\ 1\ \(1\).jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),url(../images/people-office.jpg);
     max-width: 1440px;
     background-position: center;
     background-repeat: no-repeat;
